# semantic-index

./: .codex.md  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  OPENCODE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: agent-integration.md  architecture.md  artifact-build.md  cli-contract.md  corpus-validation.md  dependency-policy.md  dogfood-report.md  platforms.md  rc-criteria.md  release-smoke-test.md  roadmap.md  security-review.md  spec.md  troubleshooting.md
docs/releases/0.12.0a1/: release-smoke-test.md
scripts/: generate-corpus.py  release-smoke.sh
src/semantic_index/: __init__.py  __main__.py  chunker.py  cli.py  discovery.py  indexer.py  lexical.py
tests/: test_chunker.py  test_cli.py  test_discovery.py  test_indexer.py  test_lexical.py
